[package]
name = "graphics-test"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "graphics_test"
path = "src/lib.rs"

[dependencies]
embedded-graphics = "0.6.2"
